Agregando secciones home y productos

--- a/inicio.html
+++ b/inicio.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grupo CARSA</title>
-    <link rel="stylesheet" href="resources/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
@@ -12,5 +12,34 @@
         <a href="#productos">Productos</a>
         <a href="#contacto">Contacto</a>
     </nav>
+
+    <section id="home">
+        <h1>Bienvenido a Comercializadora Grupo CARSA</h1>
+        <p style="color: white !important;">Explora nuestros Productos tecnologicos y contáctanos para más información.</p>
+    </section>
+
+    <section id="productos">
+        <h1>Nuestros Productos</h1>
+        <p>Aquí puedes encontrar una variedad de productos.</p>
+        <div class="product-list">
+            <div class="product-item">
+                <img src="https://www.grupocva.com/img/imagen_art.php?fProd=10420512" alt="Producto-1">
+            </div>
+            <div class="product-item">
+                <img src="https://www.grupocva.com/img/imagen_art.php?fProd=10402412" alt="Producto-2">
+            </div>
+            <div class="product-item">
+                <img src="	https://www.grupocva.com/img/imagen_art.php?fProd=9891853" alt="Producto-3">
+            </div>
+            <div class="product-item">
+                <img src="https://www.grupocva.com/img/imagen_art.php?fProd=10307561" alt="Producto-4">
+            </div>
+        </div>
+    </section>
+
+    <div style="padding: 20px 0; background-color: orange; text-align: center;">
+        Este sitio web se encuentra en github:
+        <a href="https://github.com/SamuelRicoArvizu/website-productos-tecnology">Haga clic aqui para ver el proyecto alojado</a>
+    </div>
 </body>
 </html>
